--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -1,3 +1,21 @@
-<p>
-  companies works!
-</p>
+<app-search-module></app-search-module>
+<div class="announcement mt-3 mb-3">
+  <h2>Результаты поиска:</h2>
+</div>
+<div class="companies-wrapper">
+  <mat-card class="companies_item">
+    <mat-card-header>
+      <div mat-card-avatar class="company_header-image"></div>
+      <mat-card-title>ООО "Рога и Копыта"</mat-card-title>
+      <mat-card-subtitle>ИНН 70070032489</mat-card-subtitle>
+    </mat-card-header>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Подробнее о компании
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+    </mat-expansion-panel>
+  </mat-card>
+
+</div>
