--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700')
+
+body
+  margin: 0
+  padding: 0
+  font-family: 'Montserrat', sans-serif !important
+
+*:focus
+  outline: none
